# SensorAnalysisToolkit

examples/DataConverterImgToROOT/: CMakeLists.txt  CMakeLists_Lana.txt  DataConverterImgToROOT.cxx
examples/FlatFieldCorrection/: CMakeLists.txt  FlatFieldCorrection.cxx
examples/PedestalCalculation/: PedestalCalculation.cxx
examples/PedestalCalculationWithHistogram/: CMakeLists.txt  PedestalCalculationWithHistogram.cxx
modules/: CMakeLists.txt
modules/IO/RawIOImageStack/include/: stkRawImageStackIO.hxx
modules/ImageCalculations/ImageFlatFieldCorrection/include/: stkImageFlatFieldCorrection.hxx
modules/ImageCalculations/ImageSum/include/: stkImageSum.h
modules/Plotting/Histograms/: CMakeLists.txt
modules/Plotting/Histograms/include/: stkImageHistogram.h  stkImageHistogram.hxx
